{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "GroundMovement",
            "id": "ea2ab6f1-3699-4377-95d6-5eb5e81dd3e4",
            "actions": [
                {
                    "name": "Horizontal",
                    "type": "PassThrough",
                    "id": "c523e8b1-fadd-422b-a59e-4f7826eb3fb4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseX",
                    "type": "PassThrough",
                    "id": "1aa6ce64-6874-4fce-a111-af274512a89f",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseY",
                    "type": "PassThrough",
                    "id": "8190b992-bdd4-45f1-9c02-43ce93ac62ed",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "de77e1ae-5159-4d3f-b3ef-cf94408b1d43",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "92efadce-c108-4f13-922f-a15a4e3b743c",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "94572fbb-35ed-4fdf-85ea-581c63abb4da",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "15487541-da01-4042-af69-042edde3b92a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "076398b1-20b4-4337-961e-49aaea5c7978",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "078efd92-4759-4e17-851e-c2dca5ec8d85",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "1a988c41-b476-41c4-af6b-85f3ce83c922",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a1248547-3591-473f-a762-d1fc5adf3967",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e6de527c-7fab-46e7-9be2-88c536ddcaa1",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Flashlights",
            "id": "4d2be752-0dca-466c-898b-80b0537f794e",
            "actions": [
                {
                    "name": "Switch",
                    "type": "Button",
                    "id": "e2e8d219-153e-4864-abd2-bf251f12a934",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6c92b551-21da-4751-a018-c60c6f966238",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Switch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "0c6716a7-bc8e-45cd-b7d2-175c99087e36",
            "actions": [
                {
                    "name": "Exit or Restart",
                    "type": "Button",
                    "id": "11bfa3f4-c718-42ea-81e7-909d2ef27807",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Close Game",
                    "type": "Button",
                    "id": "785b461a-0d3d-4fc6-b0ff-5e963ba24a84",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6a915100-2e5f-475b-aab8-4c6f4a96ed87",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Exit or Restart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6edc4a35-43c5-4853-a342-f52b127d510d",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Close Game",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}